# isrc_fetcher

./: INSTALL.bat  README.md  Start ISRC Fetcher.bat  app.py  pyproject.toml  setup.sh
isrc_fetcher/: ai_client.py  ai_openai.py  ai_prompts.py  cancel.py  columns.py  config.py  deezer.py  fetcher.py  musicbrainz.py  resolver.py  spotify.py  standalone.py  ui.html  ui.py  validator.py
